arabicIconMisaligned Fixes misalignment
- Changes h2 to a tags on affiliation-ng2-template, peer-review-ng2-template and research-ng2-template
- removes padding-righ

--- a/orcid-web/src/main/webapp/static/css/orcid.new.css
+++ b/orcid-web/src/main/webapp/static/css/orcid.new.css
@@ -6784,10 +6784,6 @@ ul.comma li:last-child:after {
     padding-left: 0
 }
 
-.no-padding-right {
-    padding-right: 0
-}
-
 .footer-main {
     border-top: 1px solid #c9c9c9;
     font-size: 11px;
